adicionado leitura from gravatar

--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -10,7 +10,7 @@
       </ul>
     </div>
   <% end %>
-  <h2>Leave a Reply</h2>
+  <h2>Deixar um comentario</h2>
   <p>
     <%= f.label :user_name %><span class="color2">*</span>
     <%= f.text_field :user_name %>
