resolvendo erro da porra dos comentarios

--- a/app/views/pages/blog.html.erb
+++ b/app/views/pages/blog.html.erb
@@ -35,7 +35,7 @@
                 <div class="cmsms_post_info">
                   <span class="user_name">By <%= post.author %></span>&nbsp;&nbsp;/&nbsp;&nbsp;
                   <span>Em <a href="#">Corporate</a>, <a href="#">Business</a>&nbsp;&nbsp;/&nbsp;&nbsp;</span>
-                  <span>(<%= post.comments.all.size %>) <a href="#" class="cmsms_comments">Comentários</a></span>
+                  <span>(<%= post.post_comments.all.size %>) <a href="#" class="cmsms_comments">Comentários</a></span>
                 </div>
               </header>
               <div class="cl"></div>
