--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@post) do |f| %>
+<%= form_for(@post, :html => { :multipart => true }) do |f| %>
   <% if @post.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@post.errors.count, "error") %> prohibited this post from being saved:</h2>
@@ -16,8 +16,13 @@
     <%= f.text_field :title %>
   </div>
   <div class="field">
+    <%= f.label :picture %><br />
+    <%= f.file_field :picture %>
+  </div>
+  <div class="field">
     <%= f.label :category_id %><br />
-    <%= f.number_field :category_id %>
+    <% @categories = Category.all %>
+    <%= f.select :category_id, [["Selecione uma categoria", 0]]+ @categories.collect { |c| [c.name, c.id]}  %>
   </div>
   <div class="field">
     <%= f.label :excerpt %><br />
