--- a/app/views/portfolios/_form.html.erb
+++ b/app/views/portfolios/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@portfolio) do |f| %>
+<%= form_for(@portfolio, :html => { :multipart => true }) do |f| %>
   <% if @portfolio.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@portfolio.errors.count, "error") %> prohibited this portfolio from being saved:</h2>
@@ -17,7 +17,12 @@
   </div>
   <div class="field">
     <%= f.label :picture %><br />
-    <%= f.text_field :picture %>
+    <%= f.file_field :picture %>
+  </div>
+  <div class="field">
+    <%= f.label :category_id %><br />
+    <% @categories = Category.all %>
+    <%= f.select :category_id, [["Selecione uma categoria", 0]]+ @categories.collect { |c| [c.name, c.id]}  %>
   </div>
   <div class="field">
     <%= f.label :description %><br />
