--- a/app/views/pages/portfolio.html.erb
+++ b/app/views/pages/portfolio.html.erb
@@ -11,7 +11,7 @@
                         <figure class="preloader" style="background-image: none; ">
                           <span class="image_container_img">
                             <span id="img1" class="p_img_container">
-                              <%= image_tag post.picture_url(:thumb), :class => "fullwidth", :style=>"opacity: 1;"  %>
+                              <%= image_tag portfolio.picture_url(:thumb), :class => "fullwidth", :style=>"opacity: 1;"  %>
                               <span class="image_rollover"></span>
                             </span>
                           </span>
