--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -36,8 +36,8 @@
                           </div>
                         </li>
                         <li title="September 27, 2012" class="published">
-                          <span class="fl">Date:</span>
-                          <div>Sep 09, 2012</div>
+                          <span class="fl">Data:</span>
+                          <div><%= @event.created_at.to_s(:post) %></div>
                         </li>
                       </ul>
                       <div class="divider"></div>
