arrumando datas e sobre

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -37,8 +37,9 @@
                         </li>
                         <li title="September 27, 2012" class="published">
                           <span class="fl">Data:</span>
-                          <div>Inicio: <%= @event.start_date.to_s(:post) %></div>
-                          <div>Encerra: <%= @event.end_date.to_s(:post) %></div>
+                          <div>Inicio: <%= @event.start_date.to_s(:post) %><br>
+                               Encerra: <%= @event.end_date.to_s(:post) %>
+                          </div>
                         </li>
                       </ul>
                       <div class="divider"></div>
