--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -3,13 +3,13 @@
 		<br><br>
 		<center><h1>A Empresa</h1></center>
     <article>
-      <strong>Missão:</strong><br>
+      <h3>Missão:</h3>
       <span><%= @content.mission.html_safe %></span><br>
 
-      <strong>Visão:</strong><br>
+      <h3>Visão:</h3>
       <span><%= @content.vision.html_safe %></span><br>
 
-      <strong>Valor:</strong><br>
+      <h3>Valor:</h3>
       <span><%= @content.value.html_safe %></span><br>
       <%= @content.content.html_safe %>
     </article>
