--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -84,56 +84,38 @@
 		 							<div id="rev_slider_wrapper" class="rev_slider_wrapper fullwidthbanner-container">
 		 								<div id="rev_slider" class="rev_slider fullwidthabanner" style="display:none; max-height:479px; height:479;">						
 		 									<ul>
-		 										<li data-transition="random" data-slotamount="7" data-masterspeed="300" >
-		 											<img alt="" src="/images/revolution/bg-1.png" />
-		 											<div data-linktoslide="4" data-easing="easeOutExpo" data-start="2900" data-speed="1000" data-y="283" data-x="671" class="caption sft tp-caption start">
-		 												<img alt="" src="/images/revolution/img-2.jpg" />
-		 											</div>
-		 											<div class="caption randomrotate tp-caption start" data-easing="easeOutExpo" data-start="2200" data-speed="700" data-y="283" data-x="883">
-		 												<img alt="" src="/images/revolution/img-3.jpg" />
-		 											</div>
-		 											<div data-easing="easeOutBack" data-start="2000" data-speed="800" data-y="64" data-x="671" class="caption lfb tp-caption start">
-		 												<img alt="" src="/images/revolution/img-1.jpg" />
-		 											</div>
-		 										</li>
-		 										<li data-transition="random" data-slotamount="7" >
-		 											<img alt="" src="/images/revolution/bg-3.jpg" />
-		 											<div class="tp-caption fade" data-easing="easeOutExpo" data-start="2000" data-speed="700" data-y="395" data-x="61">
-		 												<img alt="" src="/images/revolution/img-shadow2.png" />
-		 											</div>
-		 											<div data-linktoslide="4" data-easing="easeOutExpo" data-start="1500" data-speed="1000" data-y="427" data-x="85" class="caption lfb">
-		 												<img alt="" src="/images/revolution/img-shadow.png" />
-		 											</div>
-		 											<div class="caption lft" data-easing="easeOutExpo" data-start="1300" data-speed="1000" data-y="50" data-x="71">
-		 												<img alt="" src="/images/revolution/img-10.png" />
-		 											</div>
-		 											<div class="tp-caption lft" data-x="134" data-y="94" data-speed="1000" data-start="1300" data-easing="easeOutExpo"  >
-		 												<iframe src="http://www.youtube.com/embed/d9qAg-aif-E" width="395" height="295" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
-		 											</div>
-		 											<div data-easing="easeOutBack" data-start="1800" data-speed="700" class="caption lfb tp-caption start" data-y="87" data-x="706">
-		 												<img alt="" src="/images/revolution/img-7.jpg" />
-		 											</div>
-		 											<div data-easing="easeOutBack" data-start="2200" data-speed="800" data-y="285" data-x="706" class="caption lfb tp-caption start">
-		 												<img alt="" src="/images/revolution/img-8.jpg" />
-		 											</div>
-		                                             <div data-easing="easeOutBack" data-start="2400" data-speed="800" data-y="285" data-x="887" class="caption lfb tp-caption start">
-		 												<img alt="" src="/images/revolution/img-9.jpg" />
-		 											</div>
-		 										</li>
-		 										<li data-transition="random" data-slotamount="7" >
-		 											<img alt="" src="/images/revolution/bg-2.jpg" />
-		                                             <div data-linktoslide="4" data-easing="easeOutExpo" data-start="1800" data-speed="1000" data-y="82" data-x="76" class="caption sft tp-caption start">
-		 												<img alt="" src="/images/revolution/img-4.jpg" />
-		 											</div>
-		 											<div class="caption randomrotate tp-caption start" data-easing="easeOutExpo" data-start="1800" data-speed="700" data-y="82" data-x="405">
-		 												<img alt="" src="/images/revolution/img-5.jpg" />
-		 											</div>
-		 											<div data-easing="easeOutBack" data-start="2200" data-speed="800" data-y="245" data-x="405" class="caption lfb tp-caption start">
-		 												<img alt="" src="/images/revolution/img-6.jpg" />
-		 											</div>
-		 										</li>
+		 										<% @banners.each do |banner| %>
+			 										<li data-transition="random" data-slotamount="7" >
+			 											<img alt="" src="/images/revolution/bg-3.jpg" />
+			 											<% image_tag banner.picture_url(:banner_thumb) %>
+			 											<div class="tp-caption fade" data-easing="easeOutExpo" data-start="2000" data-speed="700" data-y="395" data-x="61">
+			 												<img alt="" src="/images/revolution/img-shadow2.png" />
+			 											</div>
+			 											<div data-linktoslide="4" data-easing="easeOutExpo" data-start="1500" data-speed="1000" data-y="427" data-x="85" class="caption lfb">
+			 												<img alt="" src="/images/revolution/img-shadow.png" />
+			 											</div>
+			 											<% if banner.youtube_url %>
+				 											<div class="caption lft" data-easing="easeOutExpo" data-start="1300" data-speed="1000" data-y="50" data-x="71">
+				 												<img alt="" src="/images/revolution/img-10.png" />
+				 											</div>
+				 											<div class="tp-caption lft" data-x="134" data-y="94" data-speed="1000" data-start="1300" data-easing="easeOutExpo"  >
+				 												<iframe src="<%= banner.youtube_url %>" width="395" height="295" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+				 											</div>
+			 											<% end %>
+			 											<div data-easing="easeOutBack" data-start="1800" data-speed="700" class="caption lfb tp-caption start" data-y="87" data-x="706">
+			 												<%= image_tag banner.icon1_url %>
+			 											</div>
+			 											<div data-easing="easeOutBack" data-start="2200" data-speed="800" data-y="285" data-x="706" class="caption lfb tp-caption start">
+			 												<%= image_tag banner.icon2_url %>
+			 											</div>
+			                      <div data-easing="easeOutBack" data-start="2400" data-speed="800" data-y="285" data-x="887" class="caption lfb tp-caption start">
+			 												<%= image_tag banner.icon3_url %>
+			 											</div>
+			 										</li>
+		 										<% end %>
+		 										
 		 									</ul>
-		                                 </div>
+		                </div>
 		 							</div>
 		 							<script type="text/javascript">
 		     
@@ -212,7 +194,6 @@
 
 
 		 <!-- __________________________________________________ Start Bottom -->
-
 		 				<section id="bottom">
 		 					<div class="bottom_inner">
 		 						<div class="one_fourth">
