--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -5,14 +5,14 @@
                 <div class="service-box-container fadeDown">
                     <div class="service-box service-box-1 clearfix">
                         <div class="service-box-front">
-                            <i class="icon-umbrella"></i>
+                            <i class="li_pen"></i>
 
                             <div class="service-title">
-                                <p>seo optimizing</p>
+                                <p>Professores</p>
                             </div>
 
                             <div class="service-content">
-                                <p>Cras auctor vel dui sed rhoncus.<br /> Sed urna ut purus vulputate ultricies.<br /> Quisque congue volutpat lorem</p>
+                                <p>O professor do século XXI, deve ser um profissional <br>da educação que elabora com criatividade conhecimentos teóricos<br> e críticos sobre a realidade.</p>
                             </div>
                         </div>
 
@@ -25,14 +25,15 @@
                 <div class="service-box-container fadeDown">
                     <div class="service-box service-box-2">
                         <div class="service-box-front">
-                            <i class="icon-trophy"></i>
+                            <i class="li_study"></i>
 
                             <div class="service-title">
-                                <p>software support</p>
+                                <p>Alunos</p>
                             </div>
 
                             <div class="service-content">
-                                <p>Cras auctor vel dui sed rhoncus.<br /> Sed urna ut purus vulputate ultricies.<br /> Quisque congue volutpat lorem</p>
+                                <p>O papel do aluno é o de sujeito atuante<br> na construção do conhecimento, assimilando contextos históricos, sociais, culturais<br> e também tecnológicos.</p>
+                               
                             </div>
                         </div>
 
@@ -45,14 +46,15 @@
                 <div class="service-box-container fadeDown">
                     <div class="service-box service-box-3">
                         <div class="service-box-front">
-                            <i class="icon-globe"></i>
+                            <i class="li_bubble"></i>
 
                             <div class="service-title">
-                                <p>concept design</p>
+                                <p>Escola</p>
                             </div>
 
                             <div class="service-content">
-                                <p>Cras auctor vel dui sed rhoncus.<br /> Sed urna ut purus vulputate ultricies.<br /> Quisque congue volutpat lorem</p>
+                                
+                                <p>Já não é mais vista simplesmente<br> como uma provedora de conteúdos. Ela assume também o papel da formação cidadã e ética, além de desenvolver competências ligadas ao mundo do trabalho.</p>
                             </div>
                         </div>
 
@@ -65,14 +67,14 @@
                 <div class="service-box-container fadeDown">
                     <div class="service-box service-box-4">
                         <div class="service-box-front">
-                            <i class="icon-android"></i>
+                            <i class="icon-globe"></i>
 
                             <div class="service-title">
-                                <p>user management</p>
+                                <p>Familía</p>
                             </div>
 
                             <div class="service-content">
-                                <p>Cras auctor vel dui sed rhoncus.<br /> Sed urna ut purus vulputate ultricies.<br /> Quisque congue volutpat lorem</p>
+                                 <p>Pesquisas em todo mundo mostram <br />que o envolvimento da família na vida escolar<br /> dos filhos é vital para o desenvolvimento deles</p>
                             </div>
                         </div>
 
@@ -197,35 +199,33 @@ que é desenvolvido pelo Sistema, seguido de cursos, palestras, visitas técnica
     <div class="page-element gray-element">
         <div class="container">
             <div class="title-center">
-                <h3>OUR AWESOME BRANDS</h3>
+                <h3>Compromisso com o Brasil.</h3>
 
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae mi sem. In id justo eu lectus pharetra convallis.
-                    <br />
-                    In hac habitasse platea dictumst. Etiam est ipsum, tincidunt at risus eu, pharetra viverra diam.
-                </p>
+                <h4>
+                   A editora Planeta ABC é amiga da educação pública, seja ela de municípios ou estados.
+                </h4>
             </div>
 
             <div class="brands-wrapper">
                 <div class="row  fadeDown">
                     <div class="span3">
-                        <h4>Lorem Ipsum Dolor</h4>
+                        <h4>Pesquisa</h4>
                         <br />
-                        <p>Roin facilisis varius nunc. Curabitur eros risus, ultrices et dui ut, luctus accumsan nibh. Fusce convallis sapien placerat tellus suscipit vehicula. Cras vitae diam ut justo elementum faucibus eget a diam. Etiam sodales a sem vitae fermentum. Lorem ipsum dolor sit amet.</p><a href="#">View All >> </a>
+                        <p>É importante sabermos que cidades e estados que investem na educação, contribuem ativamente no crescimento econômico e no desenvolvimento social e cultural da sociedade e do país.</p>
                     </div>
                     <div class="span3">
                         <div class="thumbnail brand-image">
-                            <img src="images/brand03.png" alt="brand-image" />
+                            <img src="images/children.jpg" alt="brand-image" />
                         </div>
                     </div>
                     <div class="span3">
                         <div class="thumbnail brand-image">
-                            <img src="images/brand01.png" alt="brand-image" />
+                            <img src="images/lapis.jpg" alt="brand-image" />
                         </div>
                     </div>
                     <div class="span3">
                         <div class="thumbnail brand-image">
-                            <img src="images/brand02.png" alt="brand-image" />
+                            <img src="images/tablets.jpg" alt="brand-image" />
                         </div>
                     </div>
                 </div>
